CSS fix: position and with of the div #conversejs
- left and width: The last 35px at bottom is not clickable
- right: in some case (e.g. frame in div), the div is over the vertical
scrollbar

--- a/css/converse.css
+++ b/css/converse.css
@@ -32,14 +32,15 @@
   bottom: 0;
   direction: ltr;
   height: 35px;
-  left: 0;
+  left: auto;
   position: fixed;
-  right: 0;
+  right: 30px;
   z-index: 30;
   display: block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  width: auto;
   /* @group Tabs */
   /* status dropdown styles */ }
   #conversejs ::selection {
